# cpm_bayesopt

./: .travis.yml  CMakeLists.txt  README.md
tests/: CMakeLists.txt  run-tests.sh  test_bayesopt.cpp
